--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
       <div class="row justify-content-center">
         <div class="col-md-4">
           <div class="my-3 card card-body shadow-sm">
-            <form action="/" method="post">
+            <form action="/" method="post" enctype="multipart/form-data">
               <div class="form-group">
                 <label for="username">Username</label>
                 <input
